# poc-rz-stock-agent

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
config/: __init__.py  settings.py
dashboard/: package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.test.ts  client.ts
dashboard/src/components/: EquityCurve.test.tsx  EquityCurve.tsx  Layout.test.tsx  Layout.tsx  RiskMeter.test.tsx  RiskMeter.tsx  SignalCard.test.tsx  SignalCard.tsx  index.ts
dashboard/src/hooks/: useWebSocket.test.ts  useWebSocket.ts
dashboard/src/pages/: PerformancePage.tsx  PortfolioPage.tsx  RiskPage.tsx  SettingsPage.tsx  SignalsPage.tsx  index.ts
dashboard/src/test/: setup.ts
dashboard/src/types/: index.ts
src/: __init__.py
src/api/: __init__.py  main.py
src/backtest/: __init__.py  engine.py
src/data/: __init__.py  alpha_vantage.py  db_models.py  exceptions.py  ib_client.py  models.py  pipeline.py  rate_limiter.py  storage.py  universe.py
src/indicators/: __init__.py  exceptions.py  support_resistance.py  technical.py  timeframes.py
src/options/: __init__.py
src/risk/: __init__.py  circuit_breakers.py  portfolio.py  position_sizing.py
src/signals/: __init__.py  realtime.py  telegram_bot.py
src/strategies/: __init__.py  base.py  breakout.py  ema_crossover.py  macd_divergence.py  rsi_mean_reversion.py  scanner.py  support_bounce.py
tests/: __init__.py  conftest.py
tests/fixtures/: alpha_vantage_responses.py  universe_data.py
tests/integration/: test_alpha_vantage_live.py  test_pipeline_integration.py
tests/unit/: test_alpha_vantage.py  test_api.py  test_backtest.py  test_breakout.py  test_circuit_breakers.py  test_ema_crossover.py  test_ib_client.py  test_macd_divergence.py  test_pipeline.py  test_portfolio.py  test_position_sizing.py  test_realtime.py  test_rsi_mean_reversion.py  test_scanner.py  test_settings.py  test_storage.py  test_strategy_base.py  test_support_bounce.py  test_support_resistance.py  test_technical.py  test_telegram_bot.py  test_timeframes.py  test_universe.py
